--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="seleccion">La Asignatura Agregada es : %s</string>
+    <string name="probando">PROBANDO</string>
 </resources>
