--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="seleccion">La Asignatura Agregada es : %s</string>
 
     <string name="probando">probando</string>
+    <string name="Guardar">Guardar</string>
 </resources>
