--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
 
     <string name="probando">probando</string>
     <string name="Guardar">Guardar</string>
+    <string name="Ingresar">Ingresar</string>
+    <string name="REGISTRAR">Registrar</string>
 </resources>
