--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="Guardar">Guardar</string>
     <string name="Ingresar">Ingresar</string>
     <string name="REGISTRAR">Registrar</string>
+    <string name="G">G</string>
 </resources>
